01 paskaita - keyboard shortcuts

--- a/HTML ir CSS/01 paskaita - 12.09 - Susipažinimas/skeletas.html
+++ b/HTML ir CSS/01 paskaita - 12.09 - Susipažinimas/skeletas.html
@@ -1,5 +1,5 @@
 <html>
-
+<head></head>
 <body>
 	<h1>Hello world!</h1>
 	<h6>Hello world!</h6>
@@ -12,12 +12,42 @@
 		<li>trecias elementas</li>
 	</ol>
 	<h1>Klaviatūros trumpiniai</h1>
-	<ol>
+	<!--  windows CTRL === mac CMD -->
+	<!--  windows ALT === mac Option -->
+	<ol> 
 		<li>CTRL S - išsaugoti failą</li>
 		<li>CTRL C - kopijuoti pažymėtą informaciją</li>
 		<li>CTRL V - įklijuoti nukopijuotą informaciją</li>
-		<li></li>
+		<li>CTRL X - iškirpti pažymėtą informaciją</li>
+		<li>CTRL A - pažymėti viską</li>
+		<li>CTRL Z - atšaukti paskutinį veiksmą</li>
+		<li>CTRL Y - atšaukti paskutinio veiksmo atšaukimą</li>
+		<li>ALT TAB - vaikščioti tarp atidarytų langų</li>
+		<li>SHIFT ALT - kalbų keitimas</li>
+		<li>ALT F4 - uždaryti atidarytą programą</li>
+		<li>CTRL W - uždaro atidarytą langą</li>
+		<li>CTRL SHIFT ESC - įjungia task manager</li>
+		<li>SHIFT Windows S - pažymimas screenshot</li>
+		<li>CTRL F - paieškos tab'e lauko atidarymas</li>
+		<li>CTRL P - failų sistemos paieškos laukas</li>
+		<li>Windows V - copy istorija</li>
+		<li>Windows D - nuleidžia visas atidarytas aplikacijas</li>
+		<li>Windows , - parodo Desktop'ą kol laikai</li>
+		<li>Windows R - run lauko atidarymas</li>
+		<li>CTRL ALT UP/DOWN - sukurti papildomų kursorių aukštyn/žemyn</li>
+		<li>ALT mouseClick - sukurti papildomų kursorių</li>
+		<li>SHIFT ALT UP/DOWN - duplikuoti eilutę aukštyn/žemyn</li>
+		<li>ALT UP/DOWN - perstumia eilutę aukštyn/žemyn</li>
+		<li>CTRL ENTER - sukuria naują eilutę (ne eilutės lūžį)</li>
+		<li>CTRL H - teksto paieška su pakeitimo galimybę</li>
+		<li>CTRL / - eilutės užkomentavimas</li>
+		<li>CTRL SHIFT + arrows - žymėjimas žodžių/eilučių</li>
+		<li>CTRL + arrows - vaikščiojimas per žodžius arba scroll bar slinkimas aukštyn/žemyn</li>
+		<li>ALT Z - word wrap toggle</li>
+		<li>CTRL L / triple mouse click (left) - pažymėti visą eilutę</li>
+		<li>SELECT + CTRL D - žymi pasikartojimus</li>
+		<li>CTRL T - naujo tab'o sukūrimas (naršyklėje)</li>
+		<li>CTRL K CTRL S - visų shortcut'ų spreadsheet</li>
 	</ol>
 </body>
-github kodo talpinimas
 </html>
