01 paskaita - keyboard shortcuts (format)

--- a/HTML ir CSS/01 paskaita - 12.09 - Susipažinimas/skeletas.html
+++ b/HTML ir CSS/01 paskaita - 12.09 - Susipažinimas/skeletas.html
@@ -1,5 +1,7 @@
 <html>
+
 <head></head>
+
 <body>
 	<h1>Hello world!</h1>
 	<h6>Hello world!</h6>
@@ -14,7 +16,7 @@
 	<h1>Klaviatūros trumpiniai</h1>
 	<!--  windows CTRL === mac CMD -->
 	<!--  windows ALT === mac Option -->
-	<ol> 
+	<ol>
 		<li>CTRL S - išsaugoti failą</li>
 		<li>CTRL C - kopijuoti pažymėtą informaciją</li>
 		<li>CTRL V - įklijuoti nukopijuotą informaciją</li>
@@ -47,7 +49,9 @@
 		<li>CTRL L / triple mouse click (left) - pažymėti visą eilutę</li>
 		<li>SELECT + CTRL D - žymi pasikartojimus</li>
 		<li>CTRL T - naujo tab'o sukūrimas (naršyklėje)</li>
+		<li>SHIFT ALT F - automatinis kodo formatavimas</li>
 		<li>CTRL K CTRL S - visų shortcut'ų spreadsheet</li>
 	</ol>
 </body>
+
 </html>
