--- a/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
+++ b/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
@@ -62,6 +62,56 @@
           </p>
         </div>
       </section>
+      <!-- Selektoriai -->
+      <section>
+        <h2>Selektoriai</h2>
+        <p class="testKlase fonoSpalva">
+          Selektoriai naudojami tam, kad CSS rašomi stiliai galėtų būti priskirti tam tikriems HTML elementams.
+        </p>
+        <ul>
+          <li>tag'o selektorius - nurodomas tag'o pavadinimas</li>
+          <li>multiple - per kablelį galima išrašyti keletą selektorių</li>
+          <li>* - visko selektorius</li>
+          <li class="testKlase">.class - susigalvojame klasės pavadinimą patys</li>
+          <li id="testID">#id - susigalvojame id pavadinimą patys</li>
+        </ul>
+        <!-- Klasės -->
+        <div>
+          <h3>Class</h3>
+          <p>
+            Aprašant klasę CSS'e pradedame nuo to, kad parašome tašką ".", kuris indikuoja CSS'ui, kad bus kuriame klasė. Tuomet po taško rašome susigalvotą pavadinimą (be tarpų ir lietuviškų raidžių).<br>
+            Norint priskirti klasę HTML'e, reikia elementui suteikti atributą "class" ir nurodyti norimos klasės pavadinimą.<br>
+            Vienam elementui gali būti priskirta daug klasių ir viena klasė gali būti naudojama daug kartų. (many to many santykis)
+          </p>
+        </div>
+        <!-- ID -->
+        <div>
+          <h3>ID</h3>
+          <p>
+            Aprašant ID CSS'e pradedame nuo to, kad parašome groteles "#", kurios indikuoja CSS'ui, kad bus kuriamas ID. Tuomet po grotelių rašome susigalvotą pavadinimą (be tarpų ir lietuviškų).<br>
+            Norint priskirti ID HTML'e, reikia elementui suteikti "id" atributą ir nurodyti norimo ID pavadinimą.<br>
+            Vienam elementui galima priskirti TIK vieną ID ir vieną ID reikėtų prisikirti TIK vienam elementui. (one to one santykis)
+          </p>
+        </div>
+      </section>
+      <!-- Display -->
+      <section>
+        <h2>Display</h2>
+        <ul>
+          <li>Inline - linijinis</li>
+          <li>Block - blokinis</li>
+          <li>Inline-Block - linijinis-blokinis</li>
+          <li>Flex - flex (mokinsimės vėliau)</li>
+          <li>Grid - tinklelis (mokinsimės vėliau)</li>
+        </ul>
+        <!-- Inline -->
+        <div>
+          <h3>Inline</h3>
+          <p>
+
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
