--- a/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
+++ b/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
@@ -108,8 +108,39 @@
         <div>
           <h3>Inline</h3>
           <p>
-
+            Linijiniai elementai puslapyje užima tik tiek vietos, kiek reikia atvaizduoti jų turiniui ir dėl to jie gali išsidėstyti vieni šalia kitų.<br>
+            Bet linijiniams elementams dydžio nustatymai neveikia.
           </p>
+          <div>
+            <span class="bendraDisplayKlase inline">Inline 1</span>
+            <span class="bendraDisplayKlase inline">Inline 2</span>
+            <span class="bendraDisplayKlase inline">Inline 3</span>
+          </div>
+        </div>
+        <!-- Block -->
+        <div>
+          <h3>Block</h3>
+          <p>
+            Blokinai elementai puslapyje užima visą galimą / tėvinio elemento plotį ir negali būti išdėstyti vieni šalia kitų.<br>
+            Blokiniams elementams dydžio nustatymai veikia.
+          </p>
+          <div>
+            <span class="bendraDisplayKlase block">Block 1</span>
+            <span class="bendraDisplayKlase block">Block 2</span>
+            <span class="bendraDisplayKlase block">Block 3</span>
+          </div>
+        </div>
+        <!-- Inline-Block -->
+        <div>
+          <h3>Inline-Block</h3>
+          <p>
+            Linijiniai-blokinai elementai puslapyje užima tik tiek vietos kiek reikia atvaizduoti jų turinį, gali būti išdėstyti vienas šalia kito (jeigu telpa) ir jiems veikia dydžio nustatymai.
+          </p>
+          <div>
+            <span class="bendraDisplayKlase inlineBlock">InlineBlock 1</span>
+            <span class="bendraDisplayKlase inlineBlock">InlineBlock 2</span>
+            <span class="bendraDisplayKlase inlineBlock">InlineBlock 3</span>
+          </div>
         </div>
       </section>
     </main>
