03 paskaita - Vėliavos atliktos

--- a/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
+++ b/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/index.html
@@ -143,6 +143,26 @@
           </div>
         </div>
       </section>
+      <!-- Užduotis vėliavos -->
+      <section>
+        <h2>Vėliavų užduotis</h2>
+        <div>
+          <h3>Lietuva</h3>
+          <div>
+            <div class="horizontalusPilnas geltona"></div>
+            <div class="horizontalusPilnas zalia"></div>
+            <div class="horizontalusPilnas raudona"></div>
+          </div>
+        </div>
+        <div>
+          <h3>Italija</h3>
+          <div class="noFontSize">
+            <div class="inline_block vertikalusPilnas zalia"></div>
+            <div class="inline_block vertikalusPilnas balta"></div>
+            <div class="inline_block vertikalusPilnas raudona"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
