--- a/HTML ir CSS/04 paskaita - 12.12 - CSS stilių prioritetai/index.html
+++ b/HTML ir CSS/04 paskaita - 12.12 - CSS stilių prioritetai/index.html
@@ -22,7 +22,45 @@
         </div>
       </section>
       <!-- Spalvos -->
-      <section></section>
+      <section>
+        <h2>Spalvos</h2>
+        <p>
+          Spalvos gali būti aprašytos įvairiais būdais. Nuo žodinių pavadinimų, kurie aiškūs eiliniam vartotojui, iki kažkokių neaiškių kodų, kuriuos supranta ne kiekvienas.
+        </p>
+        <ul>
+          <li>Spalvos pavadinimas - vos 140 užvadintų spalvų</li>
+          <li>RedGreenBlue - tryjų spalvų kontrastas (0-255)</li>
+          <li>Hex - tryjų spalvų kontrastas (00-ff)</li>
+          <li>HueSaturationLightness - atspalvis, sodrumas ir šviesumas</li>
+        </ul>
+        <div>
+          <h3>Spalvos vardas</h3>
+          <p>
+            Spalva gali būti suteikiama nurodant jos vardą. Vardinių spalvų yra ~140.
+          </p>
+        </div>
+        <div>
+          <h3>RGB kodas</h3>
+          <p>
+            RGB kodas susideda iš Red Green Blue spalvų, kurioms galime priskirti nuo 0 iki 255 kiekio. To pasekoje išgauname ~16.7m spalvų.<br>
+            RGB gali turėti permatomumą/opacity (alpha), tuomet kodas vadinamas RGBA ir turi nebe 3, bet 4 reikšmes, o ta ketvirtoji yra nuo 0 iki 1, 0.001 žingsniu.
+          </p>
+        </div>
+        <div>
+          <h3>Hex kodas</h3>
+          <p>
+            Hex yra trumpinys žodžiui hexdecimal, kuris reiškia šešioliktainis. Kitaip pasakius hex koda yra šešioliktainė skaičiavimo sistema.<br>
+            Hex kodas susideda iš #RRGGBB, kiekviena raidė yra skaičius nuo 0 iki 15 aprašytas šešioliktaine sistema ir gaunasi nuo 0 iki f.<br>
+            Pvz.: dešimtainėje 12 lygus šešioliktainėje c.<br>
+            Hex kaip ir RGB gali turėti permatomumą. Permatomumas Hex kode aprašomas kaip du papildomi simboliai, gaunasi #RRGGBBAA.<br>
+            Hex yra vienintelis spalvos aprašymo būdas, kuris gali būti trumpinamas. Jeigu vieno atspalvio (RR) simboliai yra vienodi, galima rašyti tik vieną. Jeigu jau yra trumpinamas Hex kodas, reikia trumpinti visus atspalvius (vietoj RRGGBB rašyti RGB, negalima RGGB).
+          </p>
+        </div>
+        <div>
+          <!-- namų darbams -->
+          <h3>HSL</h3>
+        </div>
+      </section>
       <!-- CSS stilių prioritetai -->
       <section></section>
     </main>
