04 paskaita - CSS stilių prioritetai (1/2)

--- a/HTML ir CSS/04 paskaita - 12.12 - CSS stilių prioritetai/index.html
+++ b/HTML ir CSS/04 paskaita - 12.12 - CSS stilių prioritetai/index.html
@@ -62,7 +62,43 @@
         </div>
       </section>
       <!-- CSS stilių prioritetai -->
-      <section></section>
+      <section>
+        <h2>CSS stilių prioritetai</h2>
+        <!-- Naršyklės numatytieji stiliai -->
+        <div>
+          <h3>Naršyklės numatytieji stiliai</h3>
+          <p>
+            Beveik kiekvienas tag'as turi savo numatytuosius naršyklės stilius.<br>
+            Skirtingos naršyklės gali turėti minimalistiškai skirtingus numatytuosius naršyklės stilius.<br>
+            Tam, kad suvienodinti stilius tarp skirtingų naršyklių, arba netgi juos panaikinti yra naudojami normalize arba reset CSS'ai.
+          </p>
+          <p>
+            <a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">Normalize CSS</a> - suvienodina stilius tarp skirtingų naršyklių.
+          </p>
+          <p>
+            <a href="https://meyerweb.com/eric/tools/css/reset/reset200802.css">Reset CSS</a> - panaikina tag'ų identitetą.
+          </p>
+        </div>
+        <!-- Tėviniai ir vaikiniai elementai -->
+        <div>
+          <h3>Tėviniai ir vaikiniai elementai</h3>
+          <p>
+            Elementas GALI turėti daug vaikinių elementų.<br>
+            Elementas TURI tik vieną tėvinį elementą.
+          </p>
+        </div>
+        <!-- Paveldėjimas -->
+        <div>
+          <h3>Paveldėjimas</h3>
+          <p>
+            Stiliai gali būti paveldimi iš tėvinio elemento į vaikinį elementą.
+          </p>
+        </div>
+        <!-- CSS Stilių Prioritetai -->
+        <div>
+          <h2>CSS Stilių Prioritetai</h2>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
