--- a/HTML ir CSS/05 paskaita - 12.13 - Box Model ir Positions/index.html
+++ b/HTML ir CSS/05 paskaita - 12.13 - Box Model ir Positions/index.html
@@ -178,6 +178,30 @@
           </div>
         </div>
       </section>
+      <!-- Selectors -->
+      <section>
+        <h2>Selectors</h2>
+        <ul>
+          <li>combinations
+            <ul>
+              <li>tagName.klase</li>
+              <li>tagname.klase1.klase2</li>
+              <li>tagName#id</li>
+              <li>tagName#id.klase</li>
+              <li>tagName#id.klase1.klase2</li>
+              <li>#id.klase</li>
+              <li>.klase.klase</li>
+              <li>...</li>
+              <li>..</li>
+              <li>.</li>
+            </ul>
+          </li>
+          <li>selector1 selector2 - selector1 viduje nesvarbu kaip giliai/toli esantis selector2</li>
+          <li>selector1 > selector2 - selector1 viduje esantis vaikinis selector2</li>
+          <li>selector1 + selector2 - </li>
+          <li>selector1 ~ selector2 - </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
