--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
@@ -26,6 +26,13 @@
         <li>col - collumn - stulpelių paskirstymas</li>
       </ul>
       <table>
+        <caption>Savaitės grafikas</caption>
+        <!-- <colgroup>
+          <col class="firstCol">
+          <col class="secondCol">
+          <col span="3">
+          <col>
+        </colgroup> -->
         <thead>
           <tr>
             <th></th>
@@ -38,7 +45,7 @@
         </thead>
         <tbody>
           <tr>
-            <th>08:00</th>
+            <td>08:00</td>
             <td>Table ir Pseudo Klasės</td>
             <td>Formos ir Pseudo Elementai</td>
             <td>Flex</td>
@@ -46,11 +53,15 @@
             <td>Flex ir Grid praktika</td>
           </tr>
           <tr>
-            <th>12:00</th>
-            <td colspan="5">Pietūs</td>
+            <td>12:00</td>
+            <td>Pietūs</td>
+            <td>Pietūs</td>
+            <td>Pietūs</td>
+            <td>Pietūs</td>
+            <td>Pietūs</td>
           </tr>
           <tr>
-            <th>13:00</th>
+            <td>13:00</td>
             <td>CAO 7 8</td>
             <td>CAO 9 10</td>
             <td>CAO 11</td>
@@ -58,7 +69,7 @@
             <td>CAO 12</td>
           </tr>
           <tr>
-            <th>16:00</th>
+            <td>16:00</td>
             <td colspan="5">Laisvė</td>
           </tr>
         </tbody>
