06 paskaita - Attribute Selectors

--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
@@ -54,18 +54,14 @@
           </tr>
           <tr>
             <td>12:00</td>
-            <td>Pietūs</td>
-            <td>Pietūs</td>
-            <td>Pietūs</td>
-            <td>Pietūs</td>
-            <td>Pietūs</td>
+            <td colspan="5">Pietūs</td>
           </tr>
           <tr>
             <td>13:00</td>
-            <td>CAO 7 8</td>
+            <td colspan>CAO 7 8</td>
             <td>CAO 9 10</td>
             <td>CAO 11</td>
-            <td>CAO 13</td>
+            <td colspan="1">CAO 13</td>
             <td>CAO 12</td>
           </tr>
           <tr>
@@ -75,6 +71,19 @@
         </tbody>
         <tfoot></tfoot>
       </table>
+    </section>
+    <!-- Selectors -->
+    <section>
+      <h2>Attribute Selectors</h2>
+      <ul>
+        <li>[attribute] - atributo vardas</li>
+        <li>[attribute="reikšmė"] - atributo vardas ir tiksli reikšmė</li>
+        <li>[attribute~="reikšmė"] - atributo vardas ir reikšmės žodis</li>
+        <li>[attribute*="reikšmė"] - atributo vardas ir tokia pati reikšmės simbolių seka</li>
+        <li>[attribute^="reikšmė"] - atributo vardas ir reikšmė prasidedanti nurodyta seka</li>
+        <li>[attribute$="reikšmė"] - atributo vardas ir reikšmė pasibaigianti nurodyta seka</li>
+        <li>[attribute|="reikšmė"] - atirbuto vardas ir reikšmė prasidedanti nurodyta reikšmė arba reikšmė-</li>
+      </ul>
     </section>
   </main>
   <footer></footer>
