06 paskaita - Pseudo Class

--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
@@ -84,6 +84,37 @@
         <li>[attribute$="reikšmė"] - atributo vardas ir reikšmė pasibaigianti nurodyta seka</li>
         <li>[attribute|="reikšmė"] - atirbuto vardas ir reikšmė prasidedanti nurodyta reikšmė arba reikšmė-</li>
       </ul>
+      <h2>Pseudo Class</h2>
+      <ul>
+        <li>Nuorodų
+          <ol>
+            <li>:link - nelankyta nuoroda</li>
+            <li>:visited - lankyta nuoroda</li>
+            <li>:hover - kursorius užėjęs ant elemento (ne tik nuorodoms)</li>
+            <li>:active - nuorodos paspaudimo momentas</li>
+          </ol>
+        </li>
+        <li>:first-child</li>
+        <li>:last-child</li>
+        <li>:only-child</li>
+        <li>:first-of-type</li>
+        <li>:last-of-type</li>
+        <li>:only-of-type</li>
+        <li>:nth</li>
+        <li>:nth</li>
+        <li>:nth</li>
+        <li>:nth</li>
+      </ul>
+      <div>
+        <h3>Pavyzdžiai</h3>
+        <a href="https://www.geeksforgeeks.org/css-selectors/">Random Nuoroda</a>
+        <a href="https://www.geeksforgeeks.org">Random Nuoroda</a>
+        <div>
+          <p>Vienintelis vaikinis</p>
+        </div>
+        <p>Ne vienintelis vaikinis</p>
+        <p>Ne vienintelis vaikinis</p>
+      </div>
     </section>
   </main>
   <footer></footer>
