06 paskaita - Pseudo Class

--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
@@ -85,7 +85,7 @@
         <li>[attribute|="reikšmė"] - atirbuto vardas ir reikšmė prasidedanti nurodyta reikšmė arba reikšmė-</li>
       </ul>
       <h2>Pseudo Class</h2>
-      <ul>
+      <ul class="sarasas">
         <li>Nuorodų
           <ol>
             <li>:link - nelankyta nuoroda</li>
@@ -94,16 +94,26 @@
             <li>:active - nuorodos paspaudimo momentas</li>
           </ol>
         </li>
-        <li>:first-child</li>
-        <li>:last-child</li>
-        <li>:only-child</li>
-        <li>:first-of-type</li>
-        <li>:last-of-type</li>
-        <li>:only-of-type</li>
-        <li>:nth</li>
-        <li>:nth</li>
-        <li>:nth</li>
-        <li>:nth</li>
+        <li>:first-child - pirmasis vaikinis</li>
+        <li>:last-child - paskutinis vaikinis</li>
+        <li>:only-child - vienintelis vaikinis</li>
+        <li>:first-of-type - pirmasis tokio tipo vaikinis</li>
+        <li>:last-of-type - paskutinis tokio tipo vaikinis</li>
+        <li>:only-of-type - vienintelis tokio tipo vaikinis</li>
+        <li>:nth-child(n) - n'tąjį vaikinį</li>
+        <li>:nth-last-child(n) - n'tąjį vaikinį nuo galo</li>
+        <li>:nth-of-type(n) - n'tąjį tokio tipo vaikinį</li>
+        <li>:nth-last-of-type(n) - n'tąjį tokio tipo vaikinį nuo galo</li>
+        <ul>Nebūtini
+          <li>:root</li>
+          <li>:not(selector)</li>
+          <li>:is()</li>
+          <li>:has()</li>
+          <li>:where()</li>
+          <li>...</li>
+          <li>..</li>
+          <li>.</li>
+        </ul>
       </ul>
       <div>
         <h3>Pavyzdžiai</h3>
