--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/index.html
@@ -126,6 +126,30 @@
         <p>Ne vienintelis vaikinis</p>
       </div>
     </section>
+    <!-- Icons -->
+    <section>
+      <h2>Icons</h2>
+      <p>
+        Ikonos neturi savo tag'o. Joms puslapyje atvaizduoti yra naudojami "i" arba "span" tag'ai.
+      </p>
+      <h3>Ikonų bibliotekos</h3>
+      <ul>
+        <li><a href="https://fontawesome.com/icons" target="_blank">FontAwesome</a></li>
+        <li><a href="https://icons.getbootstrap.com/" target="_blank">Bootstrap</a></li>
+        <li>...</li>
+        <li>..</li>
+        <li>.</li>
+      </ul>
+      <p>
+        Norint naudoti ikonas iš kažkurios bibliotekos, reikia prikabinti tos bibliotekos ikonų CDN (nuorodą).
+      </p>
+      <p>
+        Norint keisti ikonų stilių (spalva, dydis...) reikia jas keisti kaip tekstą, o ne kaip paveiksliuką.
+      </p>
+      <i class="bi bi-xbox"></i>
+      <span class="bi bi-xbox ikona"></span>
+      <div class="bi bi-xbox"></div>
+    </section>
   </main>
   <footer></footer>
 </body>
