07 paskaita - Pseudo Elementai

--- a/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/index.html
+++ b/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/index.html
@@ -191,6 +191,27 @@
         <li>.</li>
       </ul>
     </section>
+    <section>
+      <h2>Pseudo Elementai</h2>
+      <ul>
+        <li>::placeholder - parenka placeholder'io turinį</li>
+        <li>::before - sukuria turinį prieš elemento content'ą</li>
+        <li>::after - sukuria turinį po elemento content'o</li>
+        <li>::marker - sąrašo elementų žymės</li>
+        <li>::selection - pažymėtas turinys</li>
+        <li>::first-letter - pirmoji raidė</li>
+        <li>::first-line - pirmoji eilutė</li>
+        <li>::-webkit-scrollbar</li>
+        <li>::-webkit-scrollbar-thumb</li>
+        <li>::-webkit-scrollbar-track</li>
+        <li>::-webkit-...</li>
+        <li>::-webkit-..</li>
+        <li>::-webkit-.</li>
+        <li>...</li>
+        <li>..</li>
+        <li>.</li>
+      </ul>
+    </section>
   </main>
   <footer></footer>
 </body>
