07 paskaita - table task done

--- a/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/index.html
+++ b/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/index.html
@@ -212,6 +212,63 @@
         <li>.</li>
       </ul>
     </section>
+    <section>
+      <h2>ND Lentelė</h2>
+      <table border class="ND_table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Pavadinimas</th>
+            <th>Lokacija</th>
+            <th>Buvau/Nebuvau</th>
+            <th>Nuoroda</th>
+            <th>Nuotrauka</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Maču Pikču</td>
+            <td>Peru</td>
+            <td>Nebuvęs</td>
+            <td><a href="https://www.vle.lt/straipsnis/macu-pikcu/" target="_blank">Plačiau...</a></td>
+            <td><img src="https://www.vle.lt/uploads/_CGSmartImage/18466_1-da43adb3fc777c7cca7d0a730bc98683.jpg" alt="maču pikču" height="150px" width="150px"></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Maču Pikču</td>
+            <td>Peru</td>
+            <td>Nebuvęs</td>
+            <td><a href="https://www.vle.lt/straipsnis/macu-pikcu/" target="_blank">Plačiau...</a></td>
+            <td><img src="https://www.vle.lt/uploads/_CGSmartImage/18466_1-da43adb3fc777c7cca7d0a730bc98683.jpg" alt="maču pikču" height="150px" width="150px"></td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Maču Pikču</td>
+            <td>Peru</td>
+            <td>Nebuvęs</td>
+            <td><a href="https://www.vle.lt/straipsnis/macu-pikcu/" target="_blank">Plačiau...</a></td>
+            <td><img src="https://www.vle.lt/uploads/_CGSmartImage/18466_1-da43adb3fc777c7cca7d0a730bc98683.jpg" alt="maču pikču" height="150px" width="150px"></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Maču Pikču</td>
+            <td>Peru</td>
+            <td>Nebuvęs</td>
+            <td><a href="https://www.vle.lt/straipsnis/macu-pikcu/" target="_blank">Plačiau...</a></td>
+            <td><img src="https://www.vle.lt/uploads/_CGSmartImage/18466_1-da43adb3fc777c7cca7d0a730bc98683.jpg" alt="maču pikču" height="150px" width="150px"></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Maču Pikču</td>
+            <td>Peru</td>
+            <td>Nebuvęs</td>
+            <td><a href="https://www.vle.lt/straipsnis/macu-pikcu/" target="_blank">Plačiau...</a></td>
+            <td><img src="https://www.vle.lt/uploads/_CGSmartImage/18466_1-da43adb3fc777c7cca7d0a730bc98683.jpg" alt="maču pikču" height="150px" width="150px"></td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </main>
   <footer></footer>
 </body>
