08 paskaita - Menu basics

--- a/HTML ir CSS/08 paskaita - 12.18 - Display Flex/index.html
+++ b/HTML ir CSS/08 paskaita - 12.18 - Display Flex/index.html
@@ -7,12 +7,22 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <header></header>
+  <header>
+    <img src="https://i.ytimg.com/vi/CT5fEix7eL8/maxresdefault.jpg" alt="logo">
+    <nav>
+      <ul>
+        <li><a href="#nr1">Styles</a></li>
+        <li><a href="#nr2">Example</a></li>
+        <li><a href="#nr3">Dummy</a></li>
+        <li><a href="./pages/extra.html">Next Page</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <!-- Flex, Nav -->
     <section>
       <h2>Flex</h2>
-      <div>
+      <div class="basicFlex" id="nr1">
         <div>
           <h3>Container</h3>
           <ul>
@@ -37,7 +47,7 @@
           </ul>
         </div>
       </div>
-      <div>
+      <div id="nr2">
         <h3>Pavyzdys</h3>
         <div class="pvzContainer">
           <!-- div{$}*12 -->
@@ -55,6 +65,12 @@
           <div>12</div>
         </div>
       </div>
+    </section>
+    <section id="nr3">
+      <h2>Hello there</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores quaerat unde iure consequuntur cumque numquam necessitatibus, atque totam, iusto eos vitae reprehenderit natus ullam. Soluta deleniti officiis aut dolorem?
+      </p>
     </section>
   </main>
   <footer></footer>
