--- a/HTML ir CSS/09 paskaita - 12.19 - Display Grid/index.html
+++ b/HTML ir CSS/09 paskaita - 12.19 - Display Grid/index.html
@@ -43,6 +43,7 @@
             <li>grid-row: grid-row-start / grid-row-end;</li>
             <li>grid-column: grid-column-start / grid-column-end;</li>
             <li>grid-area: name | grid-row-start / grid-column-start / grid-row-end / grid-column-end;</li>
+            <li>order: number; (kaip ir flex)</li>
             <li>z-index: number; (nereikia pozicijos jeigu grid vaikinis)</li>
             <li>align-self: start | end | center | stretch | baseline;</li>
             <li>justify-self: start | end | center | stretch | baseline;</li>
