09 paskaita - flex card

--- a/HTML ir CSS/09 paskaita - 12.19 - Display Grid/index.html
+++ b/HTML ir CSS/09 paskaita - 12.19 - Display Grid/index.html
@@ -85,6 +85,27 @@
         </div>
       </div>
     </section>
+    <section id="cards">
+      <h2>Cards</h2>
+      <div class="flexCard">
+        <h3>Flex Card</h3>
+        <img src="https://thumbs.dreamstime.com/b/open-book-isolated-white-16094903.jpg" alt="open book">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolor nesciunt similique, necessitatibus temporibus officiis voluptatibus impedit in? Delectus aspernatur fuga consequatur officia odit? Explicabo veritatis nostrum ab labore. Saepe?
+        </p>
+      </div>
+      <div class="flexCard">
+        <h3>Grid Card</h3>
+        <img src="https://thumbs.dreamstime.com/b/open-book-isolated-white-16094903.jpg" alt="open book">
+        <div>
+          <span>Autorius</span>
+          <span>Metai</span>
+          <span>Kaina</span>
+          <span>Reitingas</span>
+          <span>Žanrai:</span>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
