10 paskaita - CAO_13 task

--- a/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
+++ b/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
@@ -7,6 +7,34 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  
+  <header></header>
+  <main>
+    <section> <!-- CAO 13 task -->
+      <h2>CAO 13 task</h2>
+      <div>
+        <h3>Grid</h3>
+        <div class="gridContainer_CAO_13">
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+        </div>
+      </div>
+      <div>
+        <h3>Flex</h3>
+        <div class="flexContainer_CAO_13">
+          <div class="container1">1</div>
+          <div class="container234">
+            <div class="container2">2</div>
+            <div class="container34">
+              <div class="container3">3</div>
+              <div class="container4">4</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
