--- a/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
+++ b/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
@@ -34,6 +34,48 @@
         </div>
       </div>
     </section>
+    <section> <!-- GridFlexTASK -->
+      <h2>GridFlexTASK</h2>
+      <div>
+        <h2>Grid</h2>
+        <div class="all_20_GridContainer">
+          <!-- div*20 -->
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="grid_14">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
